--- a/src/Project.Rmd
+++ b/src/Project.Rmd
@@ -5,26 +5,45 @@ date: "2024-03-19"
 output: html_document
 ---
 
-```{r setup, include=FALSE}
-knitr::opts_chunk$set(echo = TRUE)
-```
+# Abstract
 
-## R Markdown
+---
 
-This is an R Markdown document. Markdown is a simple formatting syntax for authoring HTML, PDF, and MS Word documents. For more details on using R Markdown see <http://rmarkdown.rstudio.com>.
+# Contents
 
-When you click the **Knit** button a document will be generated that includes both content as well as the output of any embedded R code chunks within the document. You can embed an R code chunk like this:
+---
 
-```{r cars}
-summary(cars)
-```
+# 1.0 Introduction
 
-## Including Plots
+---
 
-You can also embed plots, for example:
+# 2.0 Literature Review
 
-```{r pressure, echo=FALSE}
-plot(pressure)
-```
+---
 
-Note that the `echo = FALSE` parameter was added to the code chunk to prevent printing of the R code that generated the plot.
+# 3.0 Material and Methods
+
+---
+
+# 4.0 Exploratory Data Analysis
+
+---
+
+# 5.0 Analysis of Results
+
+---
+
+# 6.0 Discussion
+
+---
+
+# 7.0 Conclusions and Recommendations
+
+---
+
+# Reference List
+
+---
+
+# Appendix
+# 
