--- a/src/Project.Rmd
+++ b/src/Project.Rmd
@@ -1,6 +1,6 @@
 ---
 title: "Project"
-author: "Team Echo"
+author: "Team Echo: "
 date: "2024-03-19"
 output: html_document
 ---
@@ -23,9 +23,29 @@ output: html_document
 
 ## 2.2 Research Topic
 
-## 2.3 Regression Analysis
+## 2.3 Statistical Models
 
-### 2.3.1 
+### 2.3.1 Regression Analysis
+
+#### 2.3.1.1 Linear Models 
+
+#### 2.3.1.2 Generalised Models
+
+#### 2.3.1.3 Logistics Models
+
+#### 2.3.1.4 Poisson Models
+
+#### 2.3.1.5 Log-Linear Models
+
+#### 2.3.1.6 Model Assessment
+
+#### 2.3.1.7 Polynomial Models
+
+#### 2.3.1.8 Splines
+
+#### 2.3.1.9 Generalised Additive Models
+
+### 2.3.2 Multivariate Analysis
 
 ---
 
@@ -54,4 +74,4 @@ output: html_document
 ---
 
 # Appendix
-# 
+
