--- a/src/Project.Rmd
+++ b/src/Project.Rmd
@@ -21,6 +21,12 @@ output: html_document
 
 ## 2.1 Industry/Operational Context
 
+### 2.1.1 Variables of Interest
+#### 2.1.1.1 Temperature
+#### 2.1.1.2 Population
+#### 2.1.1.3 Industry Base
+#### 2.1.1.4 Renewable Engery Prevalence
+
 ## 2.2 Research Topic
 
 ## 2.3 Statistical Models
