--- a/src/Project.Rmd
+++ b/src/Project.Rmd
@@ -5,6 +5,46 @@ date: "2024-03-19"
 output: html_document
 ---
 
+# Packages
+
+```{r}
+
+library(readr)
+library(here)
+library(ggplot2)
+
+```
+
+---
+
+# Data
+
+```{r}
+
+# Load Data
+data_forecastdemand_vic <- read_csv(here("/Users/josephrobertmelbin/Documents/GitHub/Project2/data/Australia/a/forecastdemand_vic.csv"))
+
+data_temperature_vic <- read_csv(here("/Users/josephrobertmelbin/Documents/GitHub/Project2/data/Australia/d/temprature_vic.csv"))
+
+data_demand_vic <- read_csv(here("/Users/josephrobertmelbin/Documents/GitHub/Project2/data/Australia/d/totaldemand_vic.csv"))
+
+data_forecastdemand_sa <- read_csv(here("/Users/josephrobertmelbin/Documents/GitHub/Project2/data/Australia/b/forecastdemand_sa.csv"))
+
+data_temperature_sa <- read_csv(here("/Users/josephrobertmelbin/Documents/GitHub/Project2/data/Australia/d/temprature_sa.csv"))
+
+data_demand_sa <- read_csv(here("/Users/josephrobertmelbin/Documents/GitHub/Project2/data/Australia/d/totaldemand_sa.csv"))
+
+
+data_forecastdemand_qld <- read_csv(here("/Users/josephrobertmelbin/Documents/GitHub/Project2/data/Australia/c/forecastdemand_qld.csv"))
+
+data_temperature_qld <- read_csv(here("/Users/josephrobertmelbin/Documents/GitHub/Project2/data/Australia/d/temprature_qld.csv"))
+
+data_demand_qld <- read_csv(here("/Users/josephrobertmelbin/Documents/GitHub/Project2/data/Australia/d/totaldemand_qld.csv"))
+
+```
+
+---
+
 # Abstract
 
 ---
@@ -60,6 +100,14 @@ output: html_document
 ---
 
 # 4.0 Exploratory Data Analysis
+
+``` {r}
+ggplot(data_demand_qld, aes(x = DATETIME, y = TOTALDEMAND)) +
+  geom_point() +
+  labs(x = "X-axis label", y = "Y-axis label", title = "Scatter Plot")
+
+
+```
 
 ---
 
