--- a/src/Project.Rmd
+++ b/src/Project.Rmd
@@ -1,47 +1,34 @@
 ---
-title: "Project"
-author: "Team Echo: "
-date: "2024-03-19"
+title: "Assessment 3: Group Project"
+team: "Team Echo"
+session: "Hexa 2, 2024"
+coursecode: "ZZSC9020"
+authors:
+  - "Chuang, Keith – z5449930"
+  - "Gandhi, Rupesh – z5368767"
+Melbin, Joseph – z5394849
+CHIU, Yiu Tong – z5039191
+John Student (z123456), "
+  - "Jim Student2 (zID), "
+  - "Jack Student3 (zID)."
+date: "2024-04-20"
+
 output: html_document
----
 
-# Packages
+title: "A Data Science Approach to Forecast Electricity Consumption in Australia"
+team: 22
+session: Term 1, 2021
+coursecode: MATH0000
+author: 
+  - "John Student (z123456), "
+  - "Jim Student2 (zID), "
+  - "Jack Student3 (zID)." 
+date: "25/07/2020"
+Acknowledgements: 
+  - "By far the greatest thanks must go to my supervisor for the guidance, care and support they provided."
+  - "Thanks must also go to Emily, Michelle, John and Alex who helped by proof-reading the document in the final stages of preparation."
+  - "Although I have not lived with them for a number of years, my family also deserve many thanks for their encouragement. Thanks go to Robert Taggart for allowing his thesis style to be shamelessly copied."
 
-```{r}
-
-library(readr)
-library(here)
-library(ggplot2)
-
-```
-
----
-
-# Data
-
-```{r}
-
-# Load Data
-data_forecastdemand_vic <- read_csv(here("/Users/josephrobertmelbin/Documents/GitHub/Project2/data/Australia/a/forecastdemand_vic.csv"))
-
-data_temperature_vic <- read_csv(here("/Users/josephrobertmelbin/Documents/GitHub/Project2/data/Australia/d/temprature_vic.csv"))
-
-data_demand_vic <- read_csv(here("/Users/josephrobertmelbin/Documents/GitHub/Project2/data/Australia/d/totaldemand_vic.csv"))
-
-data_forecastdemand_sa <- read_csv(here("/Users/josephrobertmelbin/Documents/GitHub/Project2/data/Australia/b/forecastdemand_sa.csv"))
-
-data_temperature_sa <- read_csv(here("/Users/josephrobertmelbin/Documents/GitHub/Project2/data/Australia/d/temprature_sa.csv"))
-
-data_demand_sa <- read_csv(here("/Users/josephrobertmelbin/Documents/GitHub/Project2/data/Australia/d/totaldemand_sa.csv"))
-
-
-data_forecastdemand_qld <- read_csv(here("/Users/josephrobertmelbin/Documents/GitHub/Project2/data/Australia/c/forecastdemand_qld.csv"))
-
-data_temperature_qld <- read_csv(here("/Users/josephrobertmelbin/Documents/GitHub/Project2/data/Australia/d/temprature_qld.csv"))
-
-data_demand_qld <- read_csv(here("/Users/josephrobertmelbin/Documents/GitHub/Project2/data/Australia/d/totaldemand_qld.csv"))
-
-```
 
 ---
 
@@ -97,16 +84,70 @@ data_demand_qld <- read_csv(here("/Users/josephrobertmelbin/Documents/GitHub/Pro
 
 # 3.0 Material and Methods
 
+# Packages
+
+```{r}
+
+library(readr)
+library(here)
+library(ggplot2)
+
+```
+
+
+
 ---
 
 # 4.0 Exploratory Data Analysis
 
+## 4.1 Area of Research
+Determine the efficacy of temperature as the independent variable in prediction 
+of energy demand in the subsequent 24 hours on a half hourly basis for NSW 
+utilizing statistical models i.e. regression. Explore the predictive improvement 
+through the addition of independent variables. Do these models provide 
+comparable predictive results to the supplied predictions and if so under what 
+circumstances.
+
+## 4.2 Collecting and Loading Data
+
+### 4.2.1 Provided Data 
+
 ``` {r}
+
+# Load Data
+data_forecastdemand_vic <- read_csv(here("/Users/josephrobertmelbin/Documents/GitHub/Project2/data/Australia/a/forecastdemand_vic.csv"))
+
+data_temperature_vic <- read_csv(here("/Users/josephrobertmelbin/Documents/GitHub/Project2/data/Australia/d/temprature_vic.csv"))
+
+data_demand_vic <- read_csv(here("/Users/josephrobertmelbin/Documents/GitHub/Project2/data/Australia/d/totaldemand_vic.csv"))
+
+data_forecastdemand_sa <- read_csv(here("/Users/josephrobertmelbin/Documents/GitHub/Project2/data/Australia/b/forecastdemand_sa.csv"))
+
+data_temperature_sa <- read_csv(here("/Users/josephrobertmelbin/Documents/GitHub/Project2/data/Australia/d/temprature_sa.csv"))
+
+data_demand_sa <- read_csv(here("/Users/josephrobertmelbin/Documents/GitHub/Project2/data/Australia/d/totaldemand_sa.csv"))
+
+
+data_forecastdemand_qld <- read_csv(here("/Users/josephrobertmelbin/Documents/GitHub/Project2/data/Australia/c/forecastdemand_qld.csv"))
+
+data_temperature_qld <- read_csv(here("/Users/josephrobertmelbin/Documents/GitHub/Project2/data/Australia/d/temprature_qld.csv"))
+
+data_demand_qld <- read_csv(here("/Users/josephrobertmelbin/Documents/GitHub/Project2/data/Australia/d/totaldemand_qld.csv"))
+
+```
+
+### 4.2.2 Sourced Data
+
+``` {r}
+
+```
+
+
+``` {r} 
+# QLD Data
 ggplot(data_demand_qld, aes(x = DATETIME, y = TOTALDEMAND)) +
   geom_point() +
   labs(x = "X-axis label", y = "Y-axis label", title = "Scatter Plot")
-
-
 ```
 
 ---
