--- a/src/Project.Rmd
+++ b/src/Project.Rmd
@@ -6,29 +6,17 @@ coursecode: "ZZSC9020"
 authors:
   - "Chuang, Keith – z5449930"
   - "Gandhi, Rupesh – z5368767"
-Melbin, Joseph – z5394849
-CHIU, Yiu Tong – z5039191
-John Student (z123456), "
-  - "Jim Student2 (zID), "
-  - "Jack Student3 (zID)."
+  - "Melbin, Joseph – z5394849"
+  - "CHIU, Yiu Tong – z5039191"
 date: "2024-04-20"
 
-output: html_document
-
-title: "A Data Science Approach to Forecast Electricity Consumption in Australia"
-team: 22
-session: Term 1, 2021
-coursecode: MATH0000
-author: 
-  - "John Student (z123456), "
-  - "Jim Student2 (zID), "
-  - "Jack Student3 (zID)." 
-date: "25/07/2020"
 Acknowledgements: 
-  - "By far the greatest thanks must go to my supervisor for the guidance, care and support they provided."
-  - "Thanks must also go to Emily, Michelle, John and Alex who helped by proof-reading the document in the final stages of preparation."
-  - "Although I have not lived with them for a number of years, my family also deserve many thanks for their encouragement. Thanks go to Robert Taggart for allowing his thesis style to be shamelessly copied."
+  - "TBC."
+  - "TBC."
+  - "TBC."
+  - "TBC."
 
+output: html_document
 
 ---
 
@@ -94,8 +82,6 @@ library(ggplot2)
 
 ```
 
-
-
 ---
 
 # 4.0 Exploratory Data Analysis
@@ -142,6 +128,9 @@ data_demand_qld <- read_csv(here("/Users/josephrobertmelbin/Documents/GitHub/Pro
 
 ```
 
+## 4.3 Initial Data Inspection
+## 4.4 Summary Statistics
+## 4.5 Data Visualisation
 
 ``` {r} 
 # QLD Data
@@ -149,6 +138,11 @@ ggplot(data_demand_qld, aes(x = DATETIME, y = TOTALDEMAND)) +
   geom_point() +
   labs(x = "X-axis label", y = "Y-axis label", title = "Scatter Plot")
 ```
+
+## 4.6 Data Relationships
+## 4.7 Outlier Detection
+## 4.8 Feature Detecting
+## 4.9 Findings
 
 ---
 
