--- a/src/Project.Rmd
+++ b/src/Project.Rmd
@@ -76,6 +76,16 @@ output: html_document
 
 ```{r}
 
+
+
+
+
+```
+
+
+
+```{r}
+
 library(readr)
 library(here)
 library(ggplot2)
@@ -126,7 +136,7 @@ data_demand_qld <- read_csv(unzip("../data/Australia/d.zip", files = "d/totaldem
 # NSW
 #data_forecastdemand_nsw <- read_csv(here("/Users/josephrobertmelbin/Documents/GitHub/Project2/data/NSW/forecastdemand_nsw.csv"))
 data_temperature_nsw <- read_csv(unzip("../data/NSW/temperature_nsw.csv.zip", files = "temperature_nsw.csv", exdir = tempdir())[1])
-data_demand_nsw <- read_csv(unzip("../data/NSW/temperature_nsw.csv.zip", files = "temperature_nsw.csv", exdir = tempdir())[1])
+data_demand_nsw <- read_csv(unzip("../data/NSW/totaldemand_nsw.csv.zip", files = "totaldemand_nsw.csv", exdir = tempdir())[1])
 
 
 ```
@@ -135,7 +145,7 @@ data_demand_nsw <- read_csv(unzip("../data/NSW/temperature_nsw.csv.zip", files =
 
 
 
-## 4.3 Initial Data Inspection
+## 4.3.1 Initial Data Inspection
 
 ``` {r}
 # Generate Some Useful Functions
@@ -232,6 +242,40 @@ unique(data_temperature_nsw$LOCATION)
 unique(data_demand_nsw$REGIONID) # ensure REGIONID matches
 ```
 
+## 4.3.2 Initial data wrangling
+
+```{r}
+# Converts string DATETIME into dttm and creates timestamp columns
+wrangle_demand_data <- function(df) {
+  if ("DATETIME" %in% names(df)) {
+    df <- df %>%
+      mutate(DATETIME = dmy_hm(`DATETIME`, tz='AUstralia/Brisbane'),
+                          Year = year(DATETIME),        # Extract year
+                          Month = month(DATETIME),      # Extract month
+                          Day = day(DATETIME),          # Extract day
+                          Hour = hour(DATETIME),        # Extract hour
+                          Minute = minute(DATETIME)) %>%  # Extract minute
+      mutate(TimeOfDay = Hour + Minute / 60,   # Time of the day (0 - 24)
+             WeekOfMonth = factor(week(DATETIME) - week(floor_date(DATETIME, "month")) + 1, levels = c(1,2,3,4,5,6)),
+             DayOfWeek = factor(wday(DATETIME, label=TRUE), levels = c("Sun", "Mon", "Tue", "Wed", "Thu", "Fri", "Sat")))
+  } else {
+    warning("DATETIME column not found in the dataframe.")
+  }
+  
+  return(df)
+}
+```
+
+```{r}
+
+
+df_demand_nsw <- wrangle_demand_data(data_demand_nsw)
+
+
+```
+
+
+
 ## 4.4 Summary Statistics
 
 ``` {r}
@@ -304,6 +348,113 @@ ggplot(data_demand_qld, aes(x = DATETIME, y = TOTALDEMAND)) +
   geom_point() +
   labs(x = "X-axis label", y = "Y-axis label", title = "Scatter Plot")
 ```
+
+#### NSW 
+##### Yearly pattern
+
+```{r}
+
+df_demand_nsw %>% 
+  ggplot(aes(x=DATETIME, y=TOTALDEMAND)) +
+  geom_line() +
+  geom_vline(data = data.frame(x = seq(from = floor_date(min(df_demand_nsw$DATETIME), "year"),
+                                       to = ceiling_date(max(df_demand_nsw$DATETIME), "year"),
+                                       by = "1 year")), 
+             aes(xintercept = as.numeric(x)), 
+             linetype = "dotted", color = "red") +
+  scale_x_datetime(
+    date_breaks = '1 year',
+    date_labels = '%Y'
+  ) +
+  theme_minimal()
+
+
+```
+
+```{r , message=FALSE}
+
+df_demand_nsw_monthly <- df_demand_nsw %>% 
+  group_by(Month, WeekOfMonth, TimeOfDay) %>% 
+  summarise(MeanDemand = mean(TOTALDEMAND)) %>% 
+  ungroup()
+
+df_demand_nsw_monthly %>% 
+  ggplot(aes(x = TimeOfDay, y = MeanDemand)) +
+  geom_line(aes(color = WeekOfMonth)) +
+  facet_wrap(~ Month, ncol = 3) + 
+  scale_x_continuous(name = "Time of Day", breaks = seq(0, 24, by = 3), labels = function(x) sprintf("%02d:00", x)) +
+  scale_y_continuous(name = "Mean Total Demand") +
+  labs(title = "Weekly Pattern of Electricity Demand by Month") +
+  theme_minimal() + 
+  theme(axis.text.x = element_text(angle = 45, hjust = 1), 
+        strip.text.x = element_text(size = 8))
+```
+
+```{r}
+
+df_demand_nsw_seasonly <- df_demand_nsw %>% 
+  mutate(Season = case_when(
+    Month %in% c(12, 1, 2) ~ "Summer",
+    Month %in% c(3, 4, 5) ~ "Autumn",
+    Month %in% c(6, 7, 8) ~ "Winter",
+    Month %in% c(9, 10, 11) ~ "Spring",
+    TRUE ~ NA_character_))
+
+df_demand_nsw_seasonly %>% 
+  ggplot(aes(x = factor(Hour), y = TOTALDEMAND)) +
+  geom_boxplot(aes(fill=Season)) +
+  facet_wrap(~Season, scales = "free_y") + # Faceting by season
+  labs(title = "Electricity Demand by Hour Across Seasons",
+       x = "Hour of Day",
+       y = "Total Demand") +
+  scale_x_discrete(name = "Time of Day", breaks = seq(0, 24, by = 2)) +
+  theme_minimal() +
+  theme(axis.text.x = element_text(angle = 0, hjust = 1)) # Improve readability of x axis labels
+
+
+```
+
+```{r ,message=FALSE}
+
+df_demand_nsw_weekly <- df_demand_nsw %>% 
+  group_by(DayOfWeek, TimeOfDay) %>% 
+  summarise(MeanDemand = mean(TOTALDEMAND, na.rm = TRUE))
+
+df_demand_nsw_weekly %>% ggplot(aes(x = TimeOfDay, y = MeanDemand)) +
+  geom_line(aes(color = DayOfWeek)) +
+  scale_x_continuous(name = "Time of Day", breaks = seq(0, 24, by = 1), labels = function(x) sprintf("%02d:00", x)) +
+  scale_y_continuous(name = "Mean Total Demand") +
+  scale_color_brewer(palette = "Dark2") +
+  labs(title = "Mean Total Demand by Time of Day and Day of Week") +
+  theme_minimal() +
+  theme(axis.text.x = element_text(angle = 45, hjust = 1))
+
+
+```
+
+```{r , message=FALSE}
+
+df_demand_nsw_daily <- df_demand_nsw %>%
+  group_by(Month, Day) %>% 
+  summarise(Avg_daily_demand = mean(TOTALDEMAND)) %>% 
+  mutate(DATE = make_date(year=2012, month=Month, day=Day),
+         MonthName = month(DATE, label=TRUE))
+
+df_demand_nsw_daily %>% 
+  ggplot(aes(x = DATE, y = Avg_daily_demand)) +
+  geom_line() + # Draw lines between points
+  geom_point() + # Add points for each data point
+  geom_smooth() +
+  scale_x_date(date_breaks = "1 month", date_labels = "%b") + # Customize x-axis labels
+  labs(x = "Month", y = "Value", title = "Average daily demand") +
+  theme_minimal() # Use a minimal theme
+
+
+```
+
+Some days are significantly lower demand, suspect to be holidays.
+
+
 
 ## 4.6 Data Relationships
 
