--- a/src/Project.Rmd
+++ b/src/Project.Rmd
@@ -76,9 +76,12 @@ output: html_document
 
 ```{r}
 
-
-
-
+install.packages("readr")
+install.packages("here")
+install.packages("ggplot2")
+install.packages("tidyverse")
+install.packages("lubridate")
+install.packages("mgcv")
 
 ```
 
@@ -89,8 +92,12 @@ output: html_document
 library(readr)
 library(here)
 library(ggplot2)
-library(dplyr)
+library(tidyverse)
 library(lubridate)
+library(mgcv)
+library(fpp2)
+library(fable)
+library(feasts)
 
 ```
 
@@ -270,6 +277,7 @@ wrangle_demand_data <- function(df) {
 
 
 df_demand_nsw <- wrangle_demand_data(data_demand_nsw)
+df_temperature_nsw <- wrangle_demand_data(data_temperature_nsw)
 
 
 ```
@@ -349,8 +357,10 @@ ggplot(data_demand_qld, aes(x = DATETIME, y = TOTALDEMAND)) +
   labs(x = "X-axis label", y = "Y-axis label", title = "Scatter Plot")
 ```
 
-#### NSW 
-##### Yearly pattern
+### NSW 
+
+#### Demand data
+
 
 ```{r}
 
@@ -446,13 +456,303 @@ df_demand_nsw_daily %>%
   geom_point() + # Add points for each data point
   geom_smooth() +
   scale_x_date(date_breaks = "1 month", date_labels = "%b") + # Customize x-axis labels
-  labs(x = "Month", y = "Value", title = "Average daily demand") +
+  labs(x = "Month", y = "Avg demand", title = "Average daily demand") +
   theme_minimal() # Use a minimal theme
 
 
 ```
 
 Some days are significantly lower demand, suspect to be holidays.
+
+
+
+##### Temperature data
+
+```{r}
+
+
+df_temperature_nsw %>% 
+  ggplot(aes(x=DATETIME, y=TEMPERATURE)) +
+  geom_line() +
+  geom_vline(data = data.frame(x = seq(from = floor_date(min(df_temperature_nsw$DATETIME), "year"),
+                                       to = ceiling_date(max(df_temperature_nsw$DATETIME), "year"),
+                                       by = "1 year")), 
+             aes(xintercept = as.numeric(x)), 
+             linetype = "dotted", color = "red") +
+  scale_x_datetime(
+    date_breaks = '1 year',
+    date_labels = '%Y'
+  ) +
+  theme_minimal()
+
+
+```
+
+##### Holidays effect
+
+```{r}
+
+## Reference: https://www.michaelplazzer.com/datasets/australian-public-holiday-data/
+
+holidays <- read_csv('../data/Aus_public_hols_2009-2022-1.csv')
+
+holidays_nsw <- holidays %>% 
+  filter(State == 'NSW')
+```
+
+```{r}
+
+df_demand_nsw_holidays <- df_demand_nsw %>% 
+  mutate(Date = date(DATETIME)) %>% 
+  mutate(
+    IsHoliday = case_when(
+      date(DATETIME) %in% holidays_nsw$Date ~ 'Holiday',
+      TRUE ~ 'Non-Holiday'
+    ))
+
+# Boxplot to compare electricity demand on holidays vs non-holidays
+df_demand_nsw_holidays %>% 
+  ggplot(aes(x = IsHoliday, y = TOTALDEMAND)) +
+  geom_boxplot(aes(fill=IsHoliday)) +
+  labs(title = "Electricity Demand on Holidays vs. Non-Holidays",
+       x = "", y = "Total Demand") +
+  theme_minimal()
+
+
+```
+
+
+## ?? Bivariate Analysis
+
+```{r}
+
+df_nsw <- inner_join(df_demand_nsw, df_temperature_nsw, by='DATETIME')
+
+head(df_nsw)
+
+```
+
+```{r}
+
+# Note: Loess regression takes long time to run, gam is faster
+
+df_nsw %>% 
+  ggplot(aes(x=TEMPERATURE, y=TOTALDEMAND)) +
+  geom_point() +
+  geom_smooth(method = 'gam', color = "blue") + # Adds a gam regression line
+  labs(title = "Relationship between Temperature and Electricity Demand",
+       x = "Temperature",
+       y = "Electricity Demand")
+
+```
+
+Correlation testing
+```{r}
+
+cor.test(df_nsw$TEMPERATURE, df_nsw$TOTALDEMAND, use = "pearson")
+
+```
+p-value is small reject null-hypothesis.
+
+```{r}
+## Reference: http://www.bom.gov.au/climate/data/index.shtml
+solar_expo_nsw <- read_csv("../data/daily_solar_exposure_bankstown_airport/IDCJAC0016_066137_1800_Data.csv")
+
+```
+
+```{r}
+
+df_solar_expo_nsw <- solar_expo_nsw %>% 
+  mutate(
+    Year = as.integer(Year), 
+    Month = as.integer(Month), 
+    Day = as.integer(Day),
+    DATE = make_date(Year, Month, Day),
+    Solar_exposure = `Daily global solar exposure (MJ/m*m)`
+  ) %>% 
+  filter(DATE >= as.Date("2010-01-01") & DATE <= as.Date("2021-03-17")) %>% 
+  select(DATE, Solar_exposure)
+
+df_solar_expo_nsw %>%
+  summarise(na_in_solar_exposure = sum(is.na(Solar_exposure)))
+
+```
+
+1 NA value is found (probably just remove it)
+
+##### Solar Exposures
+
+```{r}
+df_solar_expo_nsw <- df_solar_expo_nsw %>% 
+  filter(!is.na(Solar_exposure))
+
+df_solar_expo_nsw %>%
+  ggplot(aes(DATE, Solar_exposure)) +
+  geom_line() +
+  geom_vline(data = data.frame(Year = unique(year(df_solar_expo_nsw$DATE))), 
+             aes(xintercept = as.Date(paste0(Year, "-01-01"))), 
+             linetype = "solid", color = "red") +
+  theme_minimal() +
+  ggtitle("Solar Exposure Over Time in NSW") +
+  xlab("Year") +
+  ylab("Solar Exposure")
+
+```
+
+
+
+```{r}
+# Converts to daily data to match solar exposure data frequency
+df_nsw_daily <- df_nsw %>% 
+  mutate(DATE = as.Date(DATETIME)) %>% 
+  group_by(DATE) %>% 
+  summarise(Daily_Avg_Temperature = mean(TEMPERATURE, na.rm = TRUE),
+            Daily_Sum_Demand = sum(TOTALDEMAND, na.rm = TRUE))
+  
+df_nsw_daily <- inner_join(df_nsw_daily, df_solar_expo_nsw, by = 'DATE')
+```
+
+```{r}
+df_nsw_daily %>% 
+  ggplot(aes(Solar_exposure,Daily_Sum_Demand)) +
+  geom_point() +
+  geom_smooth() +
+  ggtitle("Solar Exposure vs Average daily demand NSW") +
+  xlab("Solar Exposure") +
+  ylab("Average daily demand")
+
+```
+
+```{r}
+df_nsw_daily %>% 
+  ggplot(aes(Solar_exposure,Daily_Avg_Temperature)) +
+  geom_point() +
+  geom_smooth() +
+  ggtitle("Solar Exposure vs Average daily demand NSW") +
+  xlab("Solar Exposure") +
+  ylab("Average daily temperature")
+
+```
+
+```{r}
+cor.test(df_nsw_daily$Daily_Sum_Demand, df_nsw_daily$Solar_exposure, use = "pearson")
+
+```
+
+
+```{r}
+cor.test(df_nsw_daily$Daily_Avg_Temperature, df_nsw_daily$Solar_exposure, use="pearson")
+
+```
+##### Rainfall
+
+
+```{r}
+## Reference: http://www.bom.gov.au/climate/data/index.shtml
+rainfall_nsw <- read_csv("../data/daily_rainfall_bankstown_airport/IDCJAC0009_066137_1800_Data.csv")
+
+```
+
+```{r}
+
+df_rainfall_nsw <- rainfall_nsw %>% 
+  mutate(
+    Year = as.integer(Year), 
+    Month = as.integer(Month), 
+    Day = as.integer(Day),
+    DATE = make_date(Year, Month, Day),
+    Rainfall_amount = `Rainfall amount (millimetres)`
+  ) %>% 
+  filter(DATE >= as.Date("2010-01-01") & DATE <= as.Date("2021-03-17")) %>% 
+  select(DATE, Rainfall_amount)
+```
+
+
+```{r}
+
+df_nsw_daily <- inner_join(df_nsw_daily, df_rainfall_nsw, by = 'DATE')
+
+```
+
+```{r}
+
+df_nsw_daily %>% 
+  ggplot(aes(Rainfall_amount,Daily_Sum_Demand)) +
+  geom_point() +
+  geom_smooth()
+
+```
+
+Seems to have no effect on daily sum demand.
+
+
+
+slight negative correlation with demand, strong positive correlation with temperature.
+
+##### GDP
+
+```{r , message=FALSE}
+## Reference: https://data.worldbank.org/indicator/NY.GDP.MKTP.CD?locations=AU
+gdp <- read_csv('../data/GDP.csv', skip=4) %>% filter(`Country Name` == 'Australia')
+
+df_gdp <- gdp %>% 
+  pivot_longer(cols=as.character(seq(1960,2022)),
+                               names_to = 'Year',
+                               values_to = 'GDP') %>% 
+  mutate(Year = as.integer(Year)) %>% 
+  select(Year, GDP)
+
+```
+
+
+```{r}
+df_gdp %>% ggplot(aes(Year, GDP)) +
+  geom_line()
+
+```
+
+
+```{r}
+# Converts to yearly data to match GDP dataset
+df_demand_nsw_yearly = df_demand_nsw %>% 
+  mutate(Year = year(DATETIME)) %>% 
+  group_by(Year) %>% 
+  summarise(Avg_yearly_demand = mean(TOTALDEMAND))
+
+df_nsw_yearly <- inner_join(df_demand_nsw_yearly, df_gdp, by = 'Year')
+```
+
+```{r}
+
+df_nsw_yearly %>% 
+  ggplot(aes(GDP, Avg_yearly_demand)) +
+  geom_line() +
+  geom_smooth()
+
+
+```
+```{r}
+
+cor.test(df_nsw_yearly$GDP, df_nsw_yearly$Avg_yearly_demand, use="pearson")
+
+```
+Not statistically significant. Accept null hypothesis, no correlation.
+
+
+
+## ?? Lag-analysis
+
+```{r}
+
+dfts_demand_nsw <- as_tsibble(df_demand_nsw %>% select(DATETIME, TOTALDEMAND), index=DATETIME)
+
+
+dfts_demand_nsw %>%
+  model(STL(TOTALDEMAND ~ season(window = "periodic"))) %>%
+  components() %>%
+  autoplot()
+```
+The residual component's structure indicates that after removing the trend and seasonal effects, there are still patterns left to explore, which could be due to other exogenous factors, random noise, or complex dynamics not modeled by simple trend and seasonality. Further investigation needed.
 
 
 
